fixes nav menu stacking on mobile

--- a/src/components/MobileNav/MobileNav.css
+++ b/src/components/MobileNav/MobileNav.css
@@ -14,7 +14,7 @@
   visibility: hidden;
   overflow: hidden;
   background: black;
-  z-index: -1;
+  z-index: 1;
 }
 #hamburger-input {
   display: none;
